# oai-agent-book

./: .clinerule  .gitignore  README.md  abstract.md  pyproject.toml
1_はじめに/1_Agents Engineerという新しい職業/: 1.1_Agents Engineerという新しい職業.md
2_環境構築/: 2.1_環境構築.md
3_エージェント開発のためのPython Basics/: 3.0_概要.md  3.1_Pydantic.md  3.2_非同期プログラミング.md
4_Agents/: 4.1_エージェントを作ってみる.md  4.2_マルチターンで会話する.md  4.3_エージェントの挙動をトレースする.md  4.3_出力形式を指定する.md  4.4_出力形式を指定する.md
5_Tools/: 5.1_エージェントにツールを与える.md  5.2_WebSearchToolを使う.md  5.3_エージェントをツールとして使う.md  5.4_MCPを使ってエージェントを拡張する.md
books/4de025ccf2bb04/: 1.1_Agents Engineerという新しい職業.md  2-1_EnvironmentSetup.md  3-0_PythonBasics.md  3-1_pydantic.md  3.2_AsynchronousProgramming.md  4.1_FirstAgent.md  4.2_マルチターンで会話する.md  4.3_Tracing.md  4.4_出力形式を指定する.md  5-1_tools.md  5-3_AgentsAsTools.md  5-3_agentsastools.md  5-4_modelcontextprotocol.md  5.2_WebSearchToolを使う.md  6-1_AgenticRAG.md  config.yaml
data/db/transcriptions.lance/_transactions/: 0-e9dd20ce-e61d-418b-821e-d91f7f62c153.txn  1-1d635ae8-7dd0-4bc7-90ba-8c4ddb8cf705.txn  2-c67edec8-d8a8-4c82-8a4d-eb899e630cf0.txn  3-0f0b51a9-93dd-4dfe-bb5f-6ac0f9e82b07.txn  (+2 more)
src/section3/1_pydantic_tutorial/: 1_basemodel.py  2_json.py  3_nest.py  4_fileio.py  5_generics.py
src/section3/2_async/: 1_hello.py  2_concurrent.py
src/section4/: 1_basic_agent.py  2_multi_turn.py  3_ai_to_ai.py  3_tracing.py  4_structured_output.py
src/section5/: 1_function_tool.py  2_websearch_tool.py  3_agents_as_tools.py  4_mcp.py  5_think_tool.py
src/section6/: 1_prepare_dataset.py
src/section7/: coding_agent.py
(+6 files in other folders)
