[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lancedb>=0.22.0",
    "logfire>=3.14.1",
    "loguru>=0.7.3",
    "openai-agents>=0.0.14",
    "polars>=1.29.0",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
]
